# Access-Alpha-2024

./: .gitignore  FinancialHighlights_2022.csv  FinancialHighlights_2023.csv  FinancialHighlights_2026.csv  bonddata.csv  pyproject.toml
SP data/: FinancialHighlights_2021.csv  FinancialHighlights_2024.csv  FinancialHighlights_2025.csv  mikey.csv
reports/: cox_summary.csv  downgrade_feature_importance.csv  downgrade_metrics.csv  downgrade_predictions.csv  phase2_summary.md  rv_scores_20260527.csv  spread_cv_metrics.csv  spread_feature_importance.csv  spread_oof_residuals.csv
src/: config.py  crosswalk.py  evaluate.py  features.py  macro.py  model_downgrades.py  model_spreads.py  parse_capital_iq.py  rv_framework.py
tests/: test_crosswalk.py  test_features.py  test_parsers.py  test_pit_joins.py
